# agent-skill-openrouter

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
hooks/: pre-commit
plugins/bash-output-styler/.claude-plugin/: plugin.json
plugins/bulk-run/.claude-plugin/: plugin.json
plugins/claude-settings-author/.claude-plugin/: plugin.json
plugins/claude-settings-optimizer/.claude-plugin/: plugin.json
plugins/claude-skill-author/.claude-plugin/: plugin.json
plugins/code-simplifier/.claude-plugin/: plugin.json
plugins/mcp-author/.claude-plugin/: plugin.json
plugins/mcp-server-creator/.claude-plugin/: plugin.json
plugins/openrouter/.claude-plugin/: plugin.json
plugins/project-logo-author/.claude-plugin/: plugin.json
plugins/project-name-author/.claude-plugin/: plugin.json
plugins/project-readme-author/.claude-plugin/: plugin.json
plugins/project-spec-extractor/.claude-plugin/: plugin.json
plugins/python-output-styler/.claude-plugin/: plugin.json
plugins/readme-author/.claude-plugin/: plugin.json
plugins/readme-generator/.claude-plugin/: plugin.json
plugins/repo-logo-generator/.claude-plugin/: plugin.json
scripts/: bump-version.py  install-hooks.sh
shared/: bump-version.py  extract_tagline.py  pii_scanner.py  select_operation.py  validate_skill.py
tests/: conftest.py
tests/shared/: test_detect_project.py  test_extract_tagline.py  test_load_config.py  test_repo_utils.py  test_select_operation.py  test_substitute_template.py
(+68 files in other folders)
