[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeskillz"
version = "0.1.0"
description = "**🧩 A curated collection of Claude Code skills that supercharge your AI-assisted development workflow**"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
